Peekable issue history updates are now completely hidden by default

--- a/less/application.less
+++ b/less/application.less
@@ -98,6 +98,8 @@ textarea, textarea.wiki-edit {
 		-o-transition: height 1s ease;
 		transition: height 1s ease;
 
+		display: none; /* trying everything */
+
 		&:hover {
 			height: auto;
 		}
